--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,10 @@
 .read-the-docs {
   color: #888;
 }
+
+.App {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+}
