--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,18 @@ a:hover {
   color: #535bf2;
 }
 
+footer {
+  display: flex;
+  padding: 20px;
+  justify-content: center;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  font-family: monospace;
+  color: white;
+}
+
 body {
   margin: 0;
   display: flex;
