--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #1d1c1c;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -31,7 +31,6 @@ footer {
   bottom: 0;
   width: 100%;
   font-family: monospace;
-  color: white;
 }
 
 body {
